--- a/crowdFunding.Web/Views/Project/Edit.cshtml
+++ b/crowdFunding.Web/Views/Project/Edit.cshtml
@@ -40,15 +40,15 @@
     </div>
 
     <<select class="js-projectedit-category">
-        <option value="0">Default</option>
+        <option value="0">-</option>
         <option value="1">Arts</option>
-        <option value="2">Comics Illustration</option>
-        <option value="3"> Design Tech </option>
-        <option value="4">  Film </option>
-        <option value="5">  Food_Craft </option>
-        <option value="6">  Games </option>
-        <option value="7">  Music </option>
-        <option value="8">  Publishing </option>
+        <option value="2">Comics & Illustration</option>
+        <option value="3">Design & Tech</option>
+        <option value="4">Film</option>
+        <option value="5">Food & Craft</option>
+        <option value="6">Games</option>
+        <option value="7">Music</option>
+        <option value="8">Publishing</option>
 
     </select>
 
@@ -56,7 +56,7 @@
         <label for="Name">Required Amount</label>
         <input class="js-projectcreate-amountrequired form-control" id="ProjectAm" value="@Model.AmountRequired" placeholder="Change the required amount you need.">
     </div>
-    <button type="button" class="js-projectedit-submit-button btn btn-primary">
+    <button type="button" class="js-projectedit-submit-button mb-3 btn btn-primary">
         Update
     </button>
 
