--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
                             <a href="#" class="dropdown-toggle nav-link text-dark" data-toggle="dropdown" role="button" aria-expanded="false">Browse</a>
                             <ul class="dropdown-menu" role="menu">
                                 <li class="nav-item cat1"><a href="@Url.Action("Search", "Project", new { category = 1})" class="nav-link text-dark" data-category-code="1">Arts</a></li>
-                                <li class="nav-item cat2"><a href="@Url.Action("Search", "Project", new { category = 2})" class="nav-link text-dark" data-category-code="2">Comics / Illustration</a></li>
-                                <li class="nav-item cat3"><a href="@Url.Action("Search", "Project", new { category = 3})" class="nav-link text-dark">Design / Tech</a></li>
+                                <li class="nav-item cat2"><a href="@Url.Action("Search", "Project", new { category = 2})" class="nav-link text-dark" data-category-code="2">Comics & Illustration</a></li>
+                                <li class="nav-item cat3"><a href="@Url.Action("Search", "Project", new { category = 3})" class="nav-link text-dark">Design & Tech</a></li>
                                 <li class="nav-item cat4"><a href="@Url.Action("Search", "Project", new { category = 4})" class="nav-link text-dark">Film</a></li>
-                                <li class="nav-item cat5"><a href="@Url.Action("Search", "Project", new { category = 5})" class="nav-link text-dark">Food / Craft</a></li>
+                                <li class="nav-item cat5"><a href="@Url.Action("Search", "Project", new { category = 5})" class="nav-link text-dark">Food & Craft</a></li>
                                 <li class="nav-item cat6"><a href="@Url.Action("Search", "Project", new { category = 6})" class="nav-link text-dark">Games</a></li>
                                 <li class="nav-item cat7"><a href="@Url.Action("Search", "Project", new { category = 7})" class="nav-link text-dark">Music</a></li>
                                 <li class="nav-item cat8"><a href="@Url.Action("Search", "Project", new { category = 8})" class="nav-link text-dark">Publishing</a></li>
