--- a/crowdFunding.Web/Views/User/Details.cshtml
+++ b/crowdFunding.Web/Views/User/Details.cshtml
@@ -27,7 +27,7 @@
 
 
 <div class="row">
-    <div class="col-4"></div>
+    <div class="col-5"></div>
     <div class="profile_bio center mb6">
         <h2 class="mb3">@Model.User.FirstName @Model.User.LastName</h2>
         <i class="fas fa-user fa-4x mb-3" style="color: #2B14A6;"></i>
@@ -61,7 +61,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-2">
             <h3 class="user_description mobile-space mt-5">
-                Description
+                Biography
             </h3>
         </div>
         <div class="col-md-1"></div>
@@ -93,8 +93,8 @@
                                     @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
                                 </a>, backed by @p.NumberOfBackers
                             </li>
-                        </ul>
-                        <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
+                            <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a></li>
+                        </ul>                        
                     </div>
                 </div>
             </div>
