--- a/crowdFunding.Web/Views/Project/Register.cshtml
+++ b/crowdFunding.Web/Views/Project/Register.cshtml
@@ -4,17 +4,8 @@
     ViewData["Title"] = "Register";
 
 }
-    <form method="post" class="js-project-create-form">
-
-        <h4>
-            Please enter your projects' information
-        </h4>
-
-        @*<div class="form-group">
-            <label for="UserId">User ID</label>
-            <input class="js-projectcreate-userid form-control" id="UserId" placeholder="Enter your user ID.">
-
-        </div>*@
+    <form method="post" class="js-project-create-form">        
+            <h5 class="project-header">Please enter your projects' information</h5>        
 
         <div class="form-group">
             <label class="form-font" for="Project Title">Project Title</label>
@@ -31,7 +22,7 @@
             <label class="form-font" for="category">Category:</label>
             <select class="js-project-create-category create-project-form" placeholder="Category:">
 
-                <option value="0">-</option>
+                <option value="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-</option>
                 <option value="1">Arts</option>
                 <option value="2">Comics & Illustration</option>
                 <option value="3">Design & Tech</option>
@@ -44,25 +35,6 @@
             </select>
         </div>
 
-        @*<div class="form-group">
-            <label for="exampleFormControlFile1">Upload your photo here</label>
-            <input type="file" class="form-control-file" id="js-projectcreate-photos">
-        </div>
-
-        <label for="basic-url">Your vanity URL</label>
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon3">https://example.com/u</span>
-            </div>
-            <input type="text" class="form-control" id="js-projectcreate-photos" aria-describedby="basic-addon3">
-        </div>
-
-
-        <div class="form-group">
-            <label for="exampleFormControlFile1">Upload your video here</label>
-            <input type="file" class="form-control-file" id="js-projectcreate-videos">
-        </div>
-        <br />*@
         <div class="form-group">
             <label class="form-font" for="url">Add a photo:</label>
 
@@ -87,11 +59,6 @@
 
         </div>
 
-        @*<div class="form-group">
-            <label for="Amount">Project Amount</label>
-            <input class="js-projectcreate-amountrequired form-control" id="ProjectAm" placeholder="Amount Required">
-
-        </div>*@
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text">€</span>
