--- a/crowdFunding.Web/Views/Project/Edit.cshtml
+++ b/crowdFunding.Web/Views/Project/Edit.cshtml
@@ -32,20 +32,19 @@
         <input type="date" id="js-projectedit-dueto" placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
     </div>
 
-    <div class="form-group">
-        <textlabel for="Name">Project Description</textlabel>
-        <textarea id="ProjectDesc" name="ProjectDesc" rows="4" cols="50" value:"@Model.Description">
-            Change your project's description...
-        </textarea>
-        @*<input class="js-projectedit-description form-control" id="ProjectDesc" value="@Model.Description" placeholder="Change your project's description.">*@
-    </div>
+    @*<div class="form-group">
+            <textlabel for="Name">Project Description</textlabel>
+            <textarea id="ProjectDesc" name="ProjectDesc" rows="4" cols="50" value:"@Model.Description">
+                Change your project's description...
+            </textarea>
+            <input class="js-projectedit-description form-control" id="ProjectDesc" value="@Model.Description" placeholder="Change your project's description.">
+        </div>*@
 
 
     <div class="form-group">
         <label class="form-font" for="category">Category:</label>
         <select class="js-project-create-category create-project-form" placeholder="Category:">
-
-            <option value="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-</option>
+            <option selected="selected">@Model.Category</option>
             <option value="1">Arts</option>
             <option value="2">Comics & Illustration</option>
             <option value="3">Design & Tech</option>
@@ -54,14 +53,13 @@
             <option value="6">Games</option>
             <option value="7">Music</option>
             <option value="8">Publishing</option>
-
         </select>
     </div>
 
     @*<div class="form-group">
-        <label for="dueto">Due Date:</label>
-        <input type="date" id="rewardName"placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
-    </div>*@
+            <label for="dueto">Due Date:</label>
+            <input type="date" id="rewardName"placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
+        </div>*@
 
     <div class="form-group">
         <label for="url">Enter an https:// URL: for your Project's Photo</label>
