--- a/crowdFunding.Web/wwwroot/css/site.css
+++ b/crowdFunding.Web/wwwroot/css/site.css
@@ -90,10 +90,10 @@ body {
     transition: all .6s;
 }
 
-.card_home{
-    /*height: 250px;
+.card_home {
+    height: 250px;
     width: 150px;
-    background-color: blue;*/
+    /*background-color: blue;*/
     margin-left: 20px;
     margin-right: 20px;
     /*display: flex;
