--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                                 <li class="nav-item"><a href="#" class="nav-link text-dark sign-up" style="display:none" id="jsLogOut">Log Out</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown  ml-5">
+                        <li class="nav-item dropdown">
                             <a href="#" class="dropdown-toggle nav-link text-dark" data-toggle="dropdown" role="button" aria-expanded="false">Browse</a>
                             <ul class="dropdown-menu" role="menu">
                                 <li class="nav-item cat1"><a href="@Url.Action("Search", "Project", new { category = 1})" class="nav-link text-dark" data-category-code="1">Arts</a></li>
