--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -18,6 +18,7 @@
                     but we have many other projects you can browse
                 </div>
                 <a class="btn btn-warning" href="@Url.Action("Index", "Home")" role="button">Take me home</a>
+                <a class="btn btn-warning" href="@Url.Action("Search", "Project")" role="button">Browse projects</a>
             </div>
             <div class="col-md-3"></div>
         </div>
