--- a/crowdFunding.Web/wwwroot/css/site.css
+++ b/crowdFunding.Web/wwwroot/css/site.css
@@ -312,8 +312,8 @@ body {
 }
 
 .see-rewards {
-    background: #5E14A6;
-    color:white;
+    background: #246a76;
+    color: white;
 }
 
 .spinner-text {
@@ -400,4 +400,16 @@ body {
 }
 .by{
     font-size:8px;
+}
+
+.no-projects{
+    margin-top:40px;   
+}
+
+.align-some-text {
+    text-align: center;    
+}
+
+.create-project-button{
+    margin-top: 8px;    
 }
