--- a/crowdFunding.Web/Views/User/Details.cshtml
+++ b/crowdFunding.Web/Views/User/Details.cshtml
@@ -74,63 +74,84 @@
 
     <div class="row user_row mt-3" id="js-backed-list-row">
 
-        @foreach (var p in Model.User.BackedProjectsList)
+        @if (Model.User.BackedProjectsList.Count == 0)
         {
-            <div class="col-md-4">
-                <div class="card mt-5 shadow mb-5 bg-white rounded">
-                    <!-- Card image -->
-                    <img class="card-img-top img-fluid project_photo" src="@p.Photo"
-                         alt="Image can not be displayed" width="400" height="250">
-                    <!-- Card content -->
-                    <div class="card-body">
-                        <!-- Title -->
-                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
-                        <!-- Text -->
-                        <p class="card-text mt-2">@p.Description</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                by <a href="@Url.Action("Details", "User", new { id = p.ProjectCreatorId })">
-                                    @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
-                                </a>, backed by @p.NumberOfBackers
-                            </li>
-                            <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a></li>
-                        </ul>                        
-                    </div>
-                </div>
+            <div class="col-md-3"></div>
+            <div class="align-some-text">
+                <h4 class="no-projects">@Model.User.FirstName @Model.User.LastName hasn't backed any projects yet!</h4>                
             </div>
         }
-    </div>
+        else
+        {
+            @foreach (var p in Model.User.BackedProjectsList)
+            {
+                <div class="col-md-4">
+                    <div class="card mt-5 shadow mb-5 bg-white rounded">
+                        <!-- Card image -->
+                        <img class="card-img-top img-fluid project_photo" src="@p.Photo"
+                             alt="Image can not be displayed" width="400" height="250">
+                        <!-- Card content -->
+                        <div class="card-body">
+                            <!-- Title -->
+                            <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
+                            <!-- Text -->
+                            <p class="card-text mt-2">@p.Description</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    by <a href="@Url.Action("Details", "User", new { id = p.ProjectCreatorId })">
+                                        @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
+                                    </a>, backed by @p.NumberOfBackers
+                                </li>
+                                <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category })" class="text-dark mt-4"><u>@p.Category</u></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+        </div>
 
     <div class="row user_row mt-3" id="js-created-list-row">
 
-        @foreach (var p in Model.User.CreatedProjectsList)
+        @if (Model.User.BackedProjectsList.Count == 0)
         {
-            <div class="col-md-4">
-                <div class="card mt-5 shadow mb-5 bg-white rounded">
-                    <!-- Card image -->
-                    <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
-                         alt="Image can not be displayed" width="400" height="250">
-                    <!-- Card content -->
-                    <div class="card-body">
-                        <!-- Title -->
-                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
-                        <!-- Text -->
-                        <p class="card-text mt-2">@p.Description</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                by <a href="@Url.Action("Details", "User", new { id = Model.User.UserId })">
-                                    @Model.User.FirstName @Model.User.LastName
-                                </a>
-                            </li>
-                            <li class="list-group-item">@p.AmountGathered €</li>
-                            <li class="list-group-item">@p.Percentage() funded</li>
-                            <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a></li>
-                        </ul>                         
-                    </div>
-                </div>
+            <div class="col-md-3"></div>
+            <div class="align-some-text">
+                <h4 class="no-projects">@Model.User.FirstName @Model.User.LastName hasn't backed any projects yet!</h4>                
             </div>
         }
-    </div>
+        else
+        {
+
+            @foreach (var p in Model.User.CreatedProjectsList)
+            {
+                <div class="col-md-4">
+                    <div class="card mt-5 shadow mb-5 bg-white rounded">
+                        <!-- Card image -->
+                        <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
+                             alt="Image can not be displayed" width="400" height="250">
+                        <!-- Card content -->
+                        <div class="card-body">
+                            <!-- Title -->
+                            <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
+                            <!-- Text -->
+                            <p class="card-text mt-2">@p.Description</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    by <a href="@Url.Action("Details", "User", new { id = Model.User.UserId })">
+                                        @Model.User.FirstName @Model.User.LastName
+                                    </a>
+                                </li>
+                                <li class="list-group-item">@p.AmountGathered €</li>
+                                <li class="list-group-item">@p.Percentage() funded</li>
+                                <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category })" class="text-dark mt-4"><u>@p.Category</u></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+        </div>
 </div>
 
 
