--- a/crowdFunding.Web/Views/User/MyProfile.cshtml
+++ b/crowdFunding.Web/Views/User/MyProfile.cshtml
@@ -88,45 +88,22 @@
 <div class="overlaping position-relative">
 
     <div class="row user_row mt-3" id="js-backed-list-row">
-
-        @foreach (var p in Model.User.BackedProjectsList)
+        @if (Model.User.BackedProjectsList.Count == 0)
         {
-            <div class="col-md-4">
-                <div class="card mt-5 shadow mb-5 bg-white rounded">
-                    <!-- Card image -->
-                    <img class="card-img-top img-fluid project_photo" src="@p.Photo"
-                         alt="Image can not be displayed" width="400" height="250">
-                    <!-- Card content -->
-                    <div class="card-body">
-                        <!-- Title -->
-                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
-                        <!-- Text -->
-                        <p class="card-text mt-2">@p.Description</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                by
-                                <a href="@Url.Action("Details", "User", new { id = p.ProjectCreatorId })">
-                                    @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
-                                </a>, backed by @p.NumberOfBackers
-                            </li>
-                        </ul>
-                        <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a>
-                    </div>
-                </div>
+            <div class="col-md-3"></div>
+            <div class="align-some-text">
+                <h4 class="no-projects">You haven't backed any projects yet!</h4>
+                <a class="btn btn-dark create-project-button" href="@Url.Action("Search", "Project")" role="button">Browse projects</a>
             </div>
         }
-    </div>
-
-    <div class="row user_row mt-3" id="js-created-list-row">
-
-        @foreach (var p in Model.User.CreatedProjectsList)
+        else
         {
-            if (p.Photos != null && p.Photos.Count != 0)
+            @foreach (var p in Model.User.BackedProjectsList)
             {
                 <div class="col-md-4">
                     <div class="card mt-5 shadow mb-5 bg-white rounded">
                         <!-- Card image -->
-                        <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
+                        <img class="card-img-top img-fluid project_photo" src="@p.Photo"
                              alt="Image can not be displayed" width="400" height="250">
                         <!-- Card content -->
                         <div class="card-body">
@@ -134,15 +111,58 @@
                             <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
                             <!-- Text -->
                             <p class="card-text mt-2">@p.Description</p>
-                            <ul class="list-group list-group-flush">                               
-                                <li class="list-group-item">@p.AmountGathered €</li>
-                                <li class="list-group-item">@p.Percentage() funded</li>
-                                <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a></li>
-                                <li class="list-group-item"><a href="@Url.Action("Edit", "Project", new { id = p.ProjectId})" class="btn btn-primary" type="button">Edit your project</a></li>
-                            </ul>                           
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    by
+                                    <a href="@Url.Action("Details", "User", new { id = p.ProjectCreatorId })">
+                                        @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
+                                    </a>, backed by @p.NumberOfBackers
+                                </li>
+                            </ul>
+                            <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a>
                         </div>
                     </div>
                 </div>
+            }
+        }
+    </div>
+
+    <div class="row user_row mt-3" id="js-created-list-row">
+        @if (Model.User.CreatedProjectsList.Count == 0)
+        {
+            <div class="col-md-3"></div>
+            <div class="align-some-text">
+                <h4 class="no-projects">You haven't created any projects yet!</h4>
+                <a class="btn btn-dark create-project-button" href="@Url.Action("Register", "Project", new { id = Model.User.UserId })" role="button">Create a project</a>
+            </div>
+        }
+        else
+        {
+            @foreach (var p in Model.User.CreatedProjectsList)
+            {
+                if (p.Photos != null && p.Photos.Count != 0)
+                {
+                    <div class="col-md-4">
+                        <div class="card mt-5 shadow mb-5 bg-white rounded">
+                            <!-- Card image -->
+                            <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
+                                 alt="Image can not be displayed" width="400" height="250">
+                            <!-- Card content -->
+                            <div class="card-body">
+                                <!-- Title -->
+                                <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
+                                <!-- Text -->
+                                <p class="card-text mt-2">@p.Description</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">@p.AmountGathered €</li>
+                                    <li class="list-group-item">@p.Percentage() funded</li>
+                                    <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category })" class="text-dark mt-4"><u>@p.Category</u></a></li>
+                                    <li class="list-group-item"><a href="@Url.Action("Edit", "Project", new { id = p.ProjectId })" class="btn btn-primary" type="button">Edit your project</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                }
             }
         }
     </div>
