resolved add reward packages issue on project update

--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -47,7 +47,7 @@
         <div class="progress mb-3" style="height:6px;">
             <div class="progress-bar bg-success" role="progressbar" style="width: @Model.Project.Percentage()" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <h5 class="card-title mt-3">@Model.Project.AmountGathered €</h5>
+        <h5 class="card-title mt-3">@Model.Project.AmountGathered / @Model.Project.AmountRequired €</h5>
         <p class="card-text mt-3">@Model.Project.NumberOfBackers Backers</p>
         <a href="@Url.Action("Search", "Project", new { category = Model.Project.Category})" class="text-dark mt-4"><u>@Model.Project.Category</u></a>
         <p class="card-text mt-3"><i><strong>Due to @Model.Project.DueTo.ToString("d")</strong></i></p>
