--- a/crowdFunding.Web/wwwroot/css/site.css
+++ b/crowdFunding.Web/wwwroot/css/site.css
@@ -91,9 +91,9 @@ body {
 }
 
 .card_home{
-    /*height: 250px;
+    height: 250px;
     width: 150px;
-    background-color: blue;*/
+    /*background-color: blue;*/
     margin-left: 20px;
     margin-right: 20px;
     /*display: flex;
