search with Enter button

--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                 <div class="search-container">
                     <form action="">
                         <input type="search" id="searchIn" name="searchIn" placeholder="Search" value="">
-                        <a type="button" id="searchBtn" class="searchBtn" href="#"><i class="fa fa-search"></i></a>
+                        <button type="button" id="searchBtn" class="searchBtn" href="#"><i class="fa fa-search"></i></button>
                     </form>
                 </div>
             </div>
