--- a/crowdFunding.Web/wwwroot/css/site.css
+++ b/crowdFunding.Web/wwwroot/css/site.css
@@ -413,3 +413,7 @@ body {
 .create-project-button{
     margin-top: 8px;    
 }
+
+.navbar {
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
+}
