great success fix buggies

--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -135,7 +135,7 @@
                 <div class="card mb-2 shadow p-3 mb-5 bg-white rounded">
                     <h5 class="card-header reward-packages">@rp.Name</h5>
                     <div class="card-body">
-                        <h5 class="card-title js-back-project-amount @rp.RewardPackageId">@rp.Amount €</h5>
+                        <h5 class="card-title js-back-project-amount-@rp.RewardPackageId">@rp.Amount €</h5>
                         <p class="card-text">@rp.Description</p>
 
                         <button type="button" class="btn see-rewards mb-3"
