--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </nav>
-        @Html.Hidden("RedirectTo", Url.Action("Register", "Project"));
+        @Html.Hidden("RedirectTo", Url.Action("Register", "Project"))
         @*Login modal Popup*@
         <div class="modal fade" tabindex="-1" role="dialog" id="myLoginModal">
             <div class="modal-dialog" role="document">
